web-infras/parser/tests/fixtures/babel/es2015/array-rest-spread/invalid-location/output.txt
[SyntaxError]: Rest parameter must be last formal parameter (1,10)
1|[...a, b] = c
 |        ^
